# streamlit_app

./: pyproject.toml
streamlit_app/: database.py  person_info.py  register_person.py  sidebar.py
