[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = "Learning to use Streamlit"
authors = ["Joao Corte <jpaulorc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
